js/js.translator/testData/incremental/invalidation/typeScriptExports/main/m.2.d.ts
declare namespace kotlin_main {
    type Nullable<T> = T | null | undefined
    function bar(): number;
    function box(stepId: number): string;
}
